src/tests/snapshots/amber__tests__translating__div_num_shorthand.ab__bash-4.3.snap
---
source: src/tests/translating.rs
expression: ast
---
Block(
    BlockFragment {
        statements: [
            VarStmt(
                VarStmtFragment {
                    name: "x",
                    global_id: Some(
                        0,
                    ),
                    index: None,
                    kind: Num,
                    is_ephemeral: false,
                    is_ref: false,
                    is_local: false,
                    is_array_ref: false,
                    is_declared: true,
                    optimize_unused: true,
                    operator: "=",
                    value: Raw(
                        RawFragment {
                            value: "20.8",
                        },
                    ),
                },
            ),
            VarStmt(
                VarStmtFragment {
                    name: "x",
                    global_id: Some(
                        0,
                    ),
                    index: None,
                    kind: Num,
                    is_ephemeral: false,
                    is_ref: false,
                    is_local: false,
                    is_array_ref: false,
                    is_declared: true,
                    optimize_unused: true,
                    operator: "=",
                    value: Subprocess(
                        SubprocessFragment {
                            fragment: List(
                                ListFragment {
                                    values: [
                                        Raw(
                                            RawFragment {
                                                value: "awk 'BEGIN {result = ARGV[1]",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "/",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "ARGV[2]; sub(/^0\\./, \".\", result); print result }'",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        VarExpr(
                                            VarExprFragment {
                                                name: "x",
                                                global_id: Some(
                                                    0,
                                                ),
                                                kind: Num,
                                                is_ref: false,
                                                is_length: false,
                                                is_quoted: true,
                                                is_array_to_string: false,
                                                is_array_ref: false,
                                                is_declared: true,
                                                is_math_var: false,
                                                render_type: BashValue,
                                                index: None,
                                                index_pos: None,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "4.2",
                                            },
                                        ),
                                    ],
                                    separator: Empty,
                                },
                            ),
                            quoted: true,
                        },
                    ),
                },
            ),
            VarStmt(
                VarStmtFragment {
                    name: "y",
                    global_id: Some(
                        1,
                    ),
                    index: None,
                    kind: Num,
                    is_ephemeral: false,
                    is_ref: false,
                    is_local: false,
                    is_array_ref: false,
                    is_declared: true,
                    optimize_unused: true,
                    operator: "=",
                    value: Raw(
                        RawFragment {
                            value: "35.5",
                        },
                    ),
                },
            ),
            VarStmt(
                VarStmtFragment {
                    name: "y",
                    global_id: Some(
                        1,
                    ),
                    index: None,
                    kind: Num,
                    is_ephemeral: false,
                    is_ref: false,
                    is_local: false,
                    is_array_ref: false,
                    is_declared: true,
                    optimize_unused: true,
                    operator: "=",
                    value: Subprocess(
                        SubprocessFragment {
                            fragment: List(
                                ListFragment {
                                    values: [
                                        Raw(
                                            RawFragment {
                                                value: "awk 'BEGIN {result = ARGV[1]",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "/",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "ARGV[2]; sub(/^0\\./, \".\", result); print result }'",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        VarExpr(
                                            VarExprFragment {
                                                name: "y",
                                                global_id: Some(
                                                    1,
                                                ),
                                                kind: Num,
                                                is_ref: false,
                                                is_length: false,
                                                is_quoted: true,
                                                is_array_to_string: false,
                                                is_array_ref: false,
                                                is_declared: true,
                                                is_math_var: false,
                                                render_type: BashValue,
                                                index: None,
                                                index_pos: None,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "5.0",
                                            },
                                        ),
                                    ],
                                    separator: Empty,
                                },
                            ),
                            quoted: true,
                        },
                    ),
                },
            ),
        ],
        increase_indent: true,
        needs_noop: false,
        is_conditional: false,
    },
)
